<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SmallPoll</string>
	<string name="add">Добавить</string>
    <string name="remove">Удалить</string>
    <string name="dialog_ok">ОК</string>
    <string name="dialog_cancel">Отменить</string>
    <string name="remove_survey">Удалить опрос?</string>
    <string name="remove_question">Удалить вопрос?</string>
    <string name="remove_answer">Удалить ответ?</string>
    <string name="save">Сохранить</string>
    <string name="survey_name">Имя</string>
    <string name="survey_questions">Список вопросов</string>
    <string name="question_text">Вопрос</string>
    <string name="question_answers">Возможные ответы</string>
    <string name="multi_select">Несколько вариантов</string>
    <string name="start">Запустить опрос</string>
    <string name="next">Далее</string>
    <string name="from">Начало периода</string>
    <string name="to">Конец периода</string>
    <string name="send">Отправить</string>
    <string name="email">Адрес</string>
    <string name="password_hint">Введите пароль</string>
    <string name="password_check_hint">Повторите пароль</string>
    <string name="login">Войти</string>
    <string name="surveys">Список опросов</string>
    <string name="report">Сформировать отчёт</string>
    <string name="imprt">Импорт</string>
    <string name="export">Экспорт</string>
    <string name="edit_email">Введите адрес для отправки результатов</string>
    <string name="email_summary">Адрес для отправки статистики</string>
    <string name="thanks_summary">Сообщение пользователю по окончанию опроса</string>
    <string name="welcome_summary">Приглашение пройти опрос</string>
    <string name="thanks">Благодарность</string>
    <string name="welcome">Приглашение</string>
    <string name="edit_thanks">Укажите сообщение пользователю по окончании опроса</string>
    <string name="edit_welcome">Укажите приглашение пройти опрос</string>
    <string name="end_screen_delay">Время перезапуска</string>
    <string name="end_screen_delay_summary">Длительность показа экрана по окончании опроса</string>
    <string name="edit_end_screen_delay">Введите время показа, сек.</string>
    <string name="restart_delay">Время неактивности</string>
    <string name="restart_delay_summary">Длительность принудительного перезапуска при неактивности</string>
    <string name="edit_restart_delay">Введите время перезапуска, сек.</string>
    <string name="survey_run_options">Опции показа</string>
    <string name="report_options">Опции отчётов</string>
    <string name="admin_options">Опции админки</string>
    <string name="app_password">Пароль</string>
    <string name="password_summary">Пароль для входа в приложение</string>
    <string name="edit_password">Введите пароль для входа в приложение</string>
    <string name="password_error">Введён неверный пароль. Попробуйте ещё раз!</string>
    <string name="send_mail_title">Отправить сообщение</string>
    <string name="welcome_default">Пожалуйста, оставьте свой отзыв. Для этого коснитесь экрана</string>
    <string name="thanks_default">Спасибо за Ваш отзыв, это позволит нам улучшить качество нашей работы</string>
    <string name="main_menu">Настройки</string>
    <string name="edit">Изменить</string>
    <string name="survey_list_title">Список опросов</string>
    <string name="survey_view_title">Опрос</string>
    <string name="question_view_title">Вопрос</string>
    <string name="answer_view_title">Ответ</string>
    <string name="new_survey">Новый опрос</string>
    <string name="new_question">Новый вопрос</string>
    <string name="new_answer">Новый ответ</string>
    <string name="end_screen_delay_default">10</string>
    <string name="restart_delay_default">30</string>
    <string name="splash_text_size_default">30</string>
    <string name="question_text_size_default">30</string>
    <string name="gesture_threshold_default">3</string>
    <string name="gesture_threshold">Строгость жестов разблокировки</string>
    <string name="gesture_threshold_summary">Чем выше, тем точнее должен быть жест разблокировки</string>
    <string name="gesture_threshold_edit">Укажите строгость жеста разблокировки</string>
    <string name="splash_text_size">Размер шрифта заставок</string>
    <string name="splash_text_size_summary">Размер шрифта на экране приветствия/благодарности</string>
    <string name="splash_text_size_edit">Укажите размер шрифта приветствия/благодарности</string>
    <string name="question_text_size">Размер шрифта вопроса</string>
    <string name="question_text_size_summary">Размер шрифта вопроса</string>
    <string name="question_text_size_edit">Укажите размер шрифта вопроса</string>
    <string name="admin_view_title">Администрирование</string>
    <string name="preferences_view_title">Настройки</string>
    <string name="report_send_view_title">Настройки</string>
    <string name="background_file_path">Путь к файлу фона</string>
    <string name="background_file_path_summary">Устанавливает картинку фона опросника</string>
    <string name="crop">Обрезать</string>
    <string name="сrop_view_title">Редактирование фона</string>
    <string name="saving">Сохранение</string>
    <string name="font_title">Шрифт</string>
    <string name="font_summary">Шрифт для использования в опросах</string>
    <string name="splash_color_title">Цвет текста приветствия/благодарности</string>
    <string name="answer_text_color_title">Цвет текста вопроса</string>
    <string name="question_text_color_title">Цвет текста ответа</string>
    <string name="splash_color_summary">Устанавливает цвет текста приветствия/благодарности</string>
    <string name="answer_text_color_summary">Устанавливает цвет текста вопроса</string>
    <string name="question_text_color_summary">Устанавливает цвет текста ответа</string>
    <string name="answer_text_size">Размер шрифта ответа</string>
    <string name="answer_text_size_summary">Устанавливает размер шрифта ответа</string>
    <string name="answer_text_size_edit">Изменить размер шрифта ответа</string>
    <string name="answer_text_size_default">18</string>
    <string name="background_portrait_file_path">Путь к файлу фона (портретный)</string>
    <string name="background_portrait_file_path_summary">Устанавливает картинку фона опросника в портретной ориентации</string>
    <string name="background_video_path">Устанавливает видео фон</string>
    <string name="background_video_path_summary">Устанавливает видео в качестве фона</string>
    <string name="shuffle_answers_title">Случайный порядок ответов</string>
    <string name="shuffle_answers_summary">Перемешивать варианты ответов при каждом показе</string>
    <string name="settings">Настройки</string>
    <string name="clean">Очистить</string>
    <string name="file_to_import">Выбрать файл для импорта</string>
    <string name="folder_to_export">Выбрать путь для экспорта</string>
</resources>
