<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/survey_run_options">
        <EditTextPreference
            android:key="welcome"
            android:title="@string/welcome"
            android:summary="@string/welcome_summary"
            android:dialogTitle="@string/edit_welcome"
            android:defaultValue="@string/welcome_default"
        />
        <EditTextPreference
            android:key="thanks"
            android:title="@string/thanks"
            android:summary="@string/thanks_summary"
            android:dialogTitle="@string/edit_thanks"
            android:defaultValue="@string/thanks_default"
        />
        <com.eny.smallpoll.view.components.EditIntPreference
            android:key="end_screen_delay"
            android:title="@string/end_screen_delay"
            android:summary="@string/end_screen_delay_summary"
            android:dialogTitle="@string/edit_end_screen_delay"
            android:inputType="number"
            android:defaultValue="@string/end_screen_delay_default"
        />
        <com.eny.smallpoll.view.components.EditIntPreference
            android:key="inactivity_screen_delay"
            android:title="@string/restart_delay"
            android:summary="@string/restart_delay_summary"
            android:dialogTitle="@string/edit_restart_delay"
            android:inputType="number"
            android:defaultValue="@string/restart_delay_default"
        />
        <com.eny.smallpoll.view.components.ColorPreference
            android:key="splash_color"
            android:title="@string/splash_color_title"
            android:summary="@string/splash_color_summary"
        />
        <com.eny.smallpoll.view.components.ColorPreference
            android:key="question_text_color"
            android:title="@string/question_text_color_title"
            android:summary="@string/question_text_color_summary"
        />
        <com.eny.smallpoll.view.components.ColorPreference
            android:key="answer_text_color"
            android:title="@string/answer_text_color_title"
            android:summary="@string/answer_text_color_summary"
        />
        <com.eny.smallpoll.view.components.EditIntPreference
            android:key="splash_text_size"
            android:title="@string/splash_text_size"
            android:summary="@string/splash_text_size_summary"
            android:dialogTitle="@string/splash_text_size_edit"
            android:inputType="number"
            android:defaultValue="@string/splash_text_size_default"
            />
        <com.eny.smallpoll.view.components.FontPreference
            android:key="font_path"
            android:title="@string/font_title"
            android:summary="@string/font_summary"
        />
        <com.eny.smallpoll.view.components.EditIntPreference
            android:key="question_text_size"
            android:title="@string/question_text_size"
            android:summary="@string/question_text_size_summary"
            android:dialogTitle="@string/question_text_size_edit"
            android:inputType="number"
            android:defaultValue="@string/question_text_size_default"
            />
        <com.eny.smallpoll.view.components.EditIntPreference
            android:key="answer_text_size"
            android:title="@string/answer_text_size"
            android:summary="@string/answer_text_size_summary"
            android:dialogTitle="@string/answer_text_size_edit"
            android:inputType="number"
            android:defaultValue="@string/answer_text_size_default"
        />
        <com.eny.smallpoll.view.components.EditIntPreference
            android:key="gesture_threshold"
            android:title="@string/gesture_threshold"
            android:summary="@string/gesture_threshold_summary"
            android:dialogTitle="@string/gesture_threshold_edit"
            android:inputType="number"
            android:defaultValue="@string/gesture_threshold_default"
        />
        <com.eny.smallpoll.view.components.EditPathPreference2
            android:key="background_file_path"
            android:title="@string/background_file_path"
            android:summary="@string/background_file_path_summary"
        />
        <!--<com.eny.smallpoll.view.components.VideoPreference-->
            <!--android:key="background_video_path"-->
            <!--android:title="@string/background_video_path"-->
            <!--android:summary="@string/background_video_path_summary"-->
        <!--/>-->
        <com.eny.smallpoll.view.components.EditPathPreference
            android:key="background_portrait_file_path"
            android:title="@string/background_portrait_file_path"
            android:summary="@string/background_portrait_file_path_summary"
        />
        <com.eny.smallpoll.view.components.EditBooleanPreference
            android:key="shuffle_answers"
            android:title="@string/shuffle_answers_title"
            android:summary="@string/shuffle_answers_summary"
            android:defaultValue="false"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/report_options">
        <EditTextPreference
            android:key="sendto"
            android:title="@string/email"
            android:summary="@string/email_summary"
            android:dialogTitle="@string/edit_email"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/admin_options">
        <com.eny.smallpoll.view.components.EditPasswordPreference
            android:key="app_password"
            android:title="@string/app_password"
            android:summary="@string/password_summary"
            android:dialogTitle="@string/edit_password"
        />
    </PreferenceCategory>
</PreferenceScreen>